--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
 
       <div class="row3">
-        <h3>Download</h3>
+        <h3>Downloading</h3>
         <p>Andriod</p>
         <p>IOS</p>
       </div>
