modified some part

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section id="firstsection">
   
     <nav>
-			<h1>  <img src="images/Full Logo.png"></h1>
+			<p>  <img src="images/Full Logo.png"></pj>
 
 			<div class="menu">
 				<a href="#">PERSONAL</a>
@@ -51,7 +51,7 @@
   </div>
   </section>
 
-  <!-- <section class="section2">
+  <section class="section2">
     <div class="fobs">
       <div class="fobs-p">
           <p>Making money requires work. <span class="span2">Manage it seamlessly.</span></p>
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="fobs-uncle">
+    <!-- <div class="fobs-uncle">
 
        <div class="part1">
 
@@ -75,6 +75,13 @@
              <div id="h1"><img src="images/frame  dot.png">Share payment Link</div>
              <p>Create and share payment links to get paid for your goods/services. Safe and secure</p>
           </div>
+
+          <div class="box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
 
        </div>
 
@@ -96,8 +103,8 @@
               </div>
         
        </div>
-    </div> 
-  </section>  -->
+    </div>  -->
+  </section>  
 
   <section class="section3">
     <div class="figo-offer">
